--- a/ECommerceWebshop/ECommerceWebshop.csproj
+++ b/ECommerceWebshop/ECommerceWebshop.csproj
@@ -7,6 +7,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="Views\Home\About.cshtml" />
+	  <Content Remove="Views\Home\FAQ.cshtml" />
+	  <Content Remove="Views\Home\Shipping.cshtml" />
+	  <Content Remove="Views\Home\Terms.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Include="Views\Home\About.cshtml" />
+	  <Compile Include="Views\Home\FAQ.cshtml" />
+	  <Compile Include="Views\Home\Shipping.cshtml" />
+	  <Compile Include="Views\Home\Terms.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
