--- a/ECommerceWebshop/ECommerceWebshop.csproj
+++ b/ECommerceWebshop/ECommerceWebshop.csproj
@@ -20,4 +20,8 @@
 		<PackageReference Include="QuestPDF" Version="2024.10.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="wwwroot\invoices\" />
+	</ItemGroup>
+
 </Project>
